实现接收CAN总线中的消息功能，VCI_Receive有待解决问题
VCI_Receive无法给数组传递多个值，原因未知

--- a/Software/CANController/CANController.csproj
+++ b/Software/CANController/CANController.csproj
@@ -38,7 +38,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CANController.CANtest</StartupObject>
+    <StartupObject>CANController.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net, Version=2.0.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
