--- a/Software/CANController/CANController.csproj
+++ b/Software/CANController/CANController.csproj
@@ -67,10 +67,18 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AirConditionInfo.cs" />
+    <Compile Include="DBCDetail.xaml.cs">
+      <DependentUpon>DBCDetail.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DBCInfo.cs" />
     <Compile Include="PanelMSG.cs" />
     <Compile Include="PassInfo.cs" />
     <Compile Include="Win32Native.cs" />
     <Page Include="CanDetail.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DBCDetail.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -108,6 +116,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="DBC\SimpleACECU-CAN.dbc" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
