完善拖拽，完成仿真界面动态数据绑定，优化界面

--- a/Software/CANController/CANController.csproj
+++ b/Software/CANController/CANController.csproj
@@ -237,5 +237,21 @@
   <ItemGroup>
     <Resource Include="Image\BLW1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\switch0.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\switch1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\state1.png" />
+    <Resource Include="Image\state2.png" />
+    <Resource Include="Image\state3.png" />
+    <Resource Include="Image\state4.png" />
+    <Resource Include="Image\state5.png" />
+    <Resource Include="Image\state6.png" />
+    <Resource Include="Image\state7.png" />
+    <Resource Include="Image\state8.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
