--- a/Software/CANController/packages.config
+++ b/Software/CANController/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.15" targetFramework="net48" />
+  <package id="WpfAnimatedGif" version="2.0.2" targetFramework="net48" />
+  <package id="XamlAnimatedGif" version="2.1.1" targetFramework="net48" />
 </packages>
