界面升级，摩托罗拉数据的读取，所有信号模拟生成

--- a/Software/CANController/CANController.csproj
+++ b/Software/CANController/CANController.csproj
@@ -169,7 +169,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Image\panel3.png" />
+    <Resource Include="Image\panel_off.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Image\cold.png" />
@@ -303,6 +303,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Image\wifi.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\panel_on.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
