--- a/Software/CAN/CAN.csproj
+++ b/Software/CAN/CAN.csproj
@@ -64,6 +64,8 @@
     <Folder Include="DLL\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
